src/objects/Platform_Event_Type__c.object
<CustomObject>
    <description>using this to send out platform event. this holds what kind of PE can be send.</description>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bad Data</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Offline</fullName>
                </value>
                <value>
                    <fullName>Problematic</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JSON_Body__c</fullName>
        <inlineHelpText>payload of the event</inlineHelpText>
        <label>JSON Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Platform_Event_Name__c</fullName>
        <description>the event name</description>
        <inlineHelpText>platform event name (ex: Fridge_Event__e)</inlineHelpText>
        <label>Platform Event Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Platform Event Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Platform_Event_Name__c</columns>
        <columns>JSON_Body__c</columns>
        <columns>Event_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Platform Event Types Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Platform Event Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>